--- a/package.json
+++ b/package.json
@@ -14,31 +14,31 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^5.2.0",
-        "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
-        "@angular/core": "^5.2.0",
-        "@angular/forms": "^5.2.0",
-        "@angular/http": "^5.2.0",
-        "@angular/platform-browser": "^5.2.0",
-        "@angular/platform-browser-dynamic": "^5.2.0",
-        "@angular/router": "^5.2.0",
-        "core-js": "^2.4.1",
-        "rxjs": "^5.5.6",
-        "zone.js": "^0.8.19",
-        "jquery": "^3.2.1",
-        "@types/jquery": "^3.2.6",
-        "enhanced-resolve": "^3.3.0",
+        "@angular/animations": "^5.2.9",
+        "@angular/common": "^5.2.9",
+        "@angular/compiler": "^5.2.9",
+        "@angular/core": "^5.2.9",
+        "@angular/forms": "^5.2.9",
+        "@angular/http": "^5.2.9",
+        "@angular/platform-browser": "^5.2.9",
+        "@angular/platform-browser-dynamic": "^5.2.9",
+        "@angular/router": "^5.2.9",
+        "@ng-bootstrap/ng-bootstrap": "^1.0.2",
+        "@types/jquery": "^3.3.1",
         "classlist.js": "^1.1.20150312",
-        "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
-        "primeng": "^4.1.3",
+        "core-js": "^2.4.1",
+        "enhanced-resolve": "^3.3.0",
+        "jquery": "^3.2.1",
         "ng-recaptcha": "^3.0.0",
-        "typescript-formatter": "^5.2.0"
+        "primeng": "^4.1.3",
+        "rxjs": "^5.5.7",
+        "typescript-formatter": "^5.2.0",
+        "zone.js": "^0.8.19"
     },
     "devDependencies": {
-        "@angular/cli": "1.6.6",
-        "@angular/compiler-cli": "^5.2.0",
-        "@angular/language-service": "^5.2.0",
+        "@angular/cli": "^1.7.3",
+        "@angular/compiler-cli": "^5.2.9",
+        "@angular/language-service": "^5.2.9",
         "typescript": "~2.5.3"
     }
 }
