--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.2",
         "@types/jquery": "^3.3.1",
         "classlist.js": "^1.1.20150312",
-        "core-js": "^2.4.1",
+        "core-js": "^2.5.5",
         "enhanced-resolve": "^3.3.0",
         "jquery": "^3.2.1",
         "ng-recaptcha": "^3.0.0",
         "primeng": "^4.1.3",
         "rxjs": "^5.5.7",
         "typescript-formatter": "^5.2.0",
-        "zone.js": "^0.8.19"
+        "webpack": "^3.11.0",
+        "zone.js": "^0.8.26"
     },
     "devDependencies": {
         "@angular/cli": "^1.7.3",
